--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,68 @@
-.home_page#wall{
+@font-face {
+    font-family: erasdust;
+    src: url(erasdust.ttf);
+}   
+.login#toplevel{
+	position: absolute;
+	top:15%;
+	left:10%;
+	padding: 7%;
+	border-radius:5px; 
+	border:1px solid #C0C0C0; 
+}
+img.wall{
 	position: absolute;
 	width: 100%;
 	height: 100%;
 	z-index: -1;
+}
+.start{
+	position: absolute;
+	font-family: erasdust;
+	left: 20%;
+	bottom: 20%;
+	font-size: 30px;
+	color: black;
+}
+#welcome{
+	position: absolute;
+	font-family: erasdust;
+	bottom: 20%;
+	left: 30%;
+	font-size: 55px;
+	color: black;
+}
+.what#desc{
+	position: absolute;
+	font-family: erasdust;
+	top: 10%;
+	left: 10%;
+	width: 40%;
+	font-size: 20px;
+	color: black;
+}
+.contact#desc{
+	position: absolute;
+	font-family: erasdust;
+	top: 20%;
+	left: 70%;
+	width: 40%;
+	font-size: 20px;
+	color: black;
+}
+.begin#desc{
+	position: absolute;
+	font-family: erasdust;
+	bottom: 40%;
+	left: 25%;
+	font-size: 25px;
+	color: black;
+}
+#grad{
+	position: absolute;
+	left:40%;
+	bottom:50%;
+	width:20%;
+	height :20%;
+	opacity:.4;
 }
