--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 @font-face {
     font-family: erasdust;
     src: url(erasdust.ttf);
-}   
+}  
 .login#toplevel{
 	position: absolute;
 	top:15%;
@@ -12,7 +12,7 @@
 }
 img.wall{
 	position: absolute;
-	width: 100%;
+	width: 110%;
 	height: 100%;
 	z-index: -1;
 }
@@ -27,7 +27,7 @@ img.wall{
 #welcome{
 	position: absolute;
 	font-family: erasdust;
-	bottom: 20%;
+	bottom: 19%;
 	left: 30%;
 	font-size: 55px;
 	color: black;
@@ -65,4 +65,10 @@ img.wall{
 	width:20%;
 	height :20%;
 	opacity:.4;
+}
+.grad_logo{
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	z-index: -1;
 }
